--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "ruivop" "\0"
             VALUE "FileDescription", "A new Flutter project." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "pokemon_ev_calculator" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2021 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "pokemon_ev_calculator.exe" "\0"
-            VALUE "ProductName", "pokemon_ev_calculator" "\0"
+            VALUE "InternalName", "IV, EV and Stats Calculator" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2021 ruivop. All rights reserved." "\0"
+            VALUE "OriginalFilename", "IV, EV and Stats Calculator.exe" "\0"
+            VALUE "ProductName", "Stats Calculator" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
