--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+    
   cupertino_icons: ^1.0.2
   sliver_tools: ^0.2.5
   provider: ^6.0.1
   draggable_scrollbar: ^0.1.0
-  wakelock: ^0.5.6
   auto_size_text: ^3.0.0
   numberpicker: ^2.1.1
-  firebase_core: ^1.10.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
+  flutter_native_splash: ^1.3.2
   flutter_test:
     sdk: flutter
 
@@ -81,14 +77,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: resources/roboto/Roboto-Regular.ttf
-        - asset: resources/roboto/Roboto-Italic.ttf
-          style: italic
-        - asset: resources/roboto/Roboto-Bold.ttf
-          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
@@ -101,3 +89,7 @@ flutter:
 flutter_icons:
   image_path: "resources/icon.png"
   android: true
+
+flutter_native_splash:
+  color: "#0c0c0c"
+  image: "resources/icon.png"
