supported multiple languages. Added a button to not always show the stats by card.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+  flutter_localizations:
+    sdk: flutter
+
   cupertino_icons: ^1.0.2
   sliver_tools: ^0.2.5
   provider: ^6.0.1
@@ -52,7 +54,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -65,13 +66,10 @@ flutter:
   assets:
     - resources/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -85,7 +83,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_icons:
   image_path: "resources/icon.png"
   android: true
@@ -93,3 +90,5 @@ flutter_icons:
 flutter_native_splash:
   color: "#0c0c0c"
   image: "resources/icon.png"
+flutter_intl:
+  enabled: true
