--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   auto_size_text: ^3.0.0
   numberpicker: ^2.1.1
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
